# max-jud-tjba

./: .gitignore  README.md  pyproject.toml
img/: grafico.html
src/model_tcc/: max_jud.ipynb  model.ipynb
