[project]
name = "model-tcc"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "dask (>=2025.7.0,<2026.0.0)",
    "modin[ray] (>=0.35.0,<0.36.0)",
    "pyomo (>=6.9.4,<7.0.0)",
    "highspy (>=1.11.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "model_tcc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
